Start Data Exploration

--- a/FinancialData.ipynb/FinancialData.ipynb
+++ b/FinancialData.ipynb/FinancialData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "fc3dccf3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a60615bf",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "9        No  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4828c02e",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "277471c2",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "(24386900, 15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "42e4cc3a",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "max     9.223292e+18  9.992800e+04  9.402000e+03  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "2ee4c496",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "6c4d09c1",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
        "[24386834 rows x 15 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "cdf4f4cc",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "np.int64(66)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "104f5891",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "83ec4d79",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8ee6e944",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "4ff6b08d",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "98e8bf97",
    "metadata": {},
    "outputs": [],
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "a601ee60",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1028,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "a62eea04",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
        "max     9.223292e+18  9.402000e+03  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "42c06f1f",
    "metadata": {},
    "outputs": [
@@ -1480,13 +1480,58 @@
        "[1585 rows x 15 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "transactions_df[transactions_df['Year'] == 1991]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "654b9ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Yes or No into Binary\n",
+    "transactions_df.loc[transactions_df['Is Fraud?'] == 'Yes', 'Is Fraud?'] = 1\n",
+    "transactions_df.loc[transactions_df['Is Fraud?'] == 'No',  'Is Fraud?'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cf2a0802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No Error', 'Technical Glitch', 'Insufficient Balance', 'Bad PIN',\n",
+       "       'Bad PIN,Insufficient Balance', 'Bad Expiration',\n",
+       "       'Bad PIN,Technical Glitch', 'Bad Card Number', 'Bad CVV',\n",
+       "       'Bad Zipcode', 'Insufficient Balance,Technical Glitch',\n",
+       "       'Bad Card Number,Insufficient Balance', 'Bad Card Number,Bad CVV',\n",
+       "       'Bad CVV,Insufficient Balance', 'Bad Card Number,Bad Expiration',\n",
+       "       'Bad Expiration,Bad CVV', 'Bad Expiration,Insufficient Balance',\n",
+       "       'Bad Expiration,Technical Glitch',\n",
+       "       'Bad Card Number,Bad Expiration,Technical Glitch',\n",
+       "       'Bad CVV,Technical Glitch', 'Bad Card Number,Technical Glitch',\n",
+       "       'Bad Zipcode,Insufficient Balance', 'Bad Zipcode,Technical Glitch',\n",
+       "       'Bad Card Number,Bad Expiration,Insufficient Balance'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions_df['Errors?'].unique()"
    ]
   },
   {
@@ -1499,25 +1544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b6bb477b",
+   "execution_count": null,
+   "id": "df9ca620",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'wesdsf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mwesdsf\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'wesdsf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "wesdsf"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1536,7 +1567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
