--- a/FinancialData.ipynb/FinancialData.ipynb
+++ b/FinancialData.ipynb/FinancialData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fc3dccf3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a60615bf",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "9        No  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4828c02e",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "277471c2",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "(24386900, 15)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "42e4cc3a",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "max     9.223292e+18  9.992800e+04  9.402000e+03  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2ee4c496",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6c4d09c1",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cdf4f4cc",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "104f5891",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "83ec4d79",
    "metadata": {},
    "outputs": [],
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8ee6e944",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4ff6b08d",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "98e8bf97",
    "metadata": {},
    "outputs": [],
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a601ee60",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "a62eea04",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
        "max     9.223292e+18  9.402000e+03  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "654b9ed7",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cf2a0802",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "0f22eec3",
    "metadata": {},
    "outputs": [],
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a68fd423",
    "metadata": {},
    "outputs": [],
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "258a9861",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "f67fba51",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "2242a1e3",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "Name: Amount, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "df9ca620",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ca399361",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8fb21f53",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "16b0b9ed",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "0ce98409",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5b9f2f6b",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1492,7 @@
        "260   267               1727      24.930243     29.315001"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9cb5833e",
    "metadata": {},
    "outputs": [],
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 33,
    "id": "2501fbb8",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1743,7 @@
        "503    945               3208      83.356160    110.957399          36"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 34,
    "id": "5425cd23",
    "metadata": {},
    "outputs": [],
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6283f1b7",
    "metadata": {},
    "outputs": [
@@ -1973,7 +1973,7 @@
        "34    35               7546      51.908114     95.817241"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "102cf9ff",
    "metadata": {},
    "outputs": [],
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 37,
    "id": "2ee57165",
    "metadata": {},
    "outputs": [
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "id": "5d1c500b",
    "metadata": {},
    "outputs": [
@@ -2059,6 +2059,30 @@
    "metadata": {},
    "source": [
     "# Feature Engineering "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "09f1f454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Detects if transaction is usually small/large for that user\n",
+    "\n",
+    "transactions_df['amount_zscore_user'] = (\n",
+    "    (transactions_df['Amount'] - transactions_df.groupby('User')['Amount'].transform('mean')) /\n",
+    "    transactions_df.groupby('User')['Amount'].transform('std')\n",
+    ")\n",
+    "\n",
+    "# Time since last transaction \n",
+    "transactions_df['time_since_last_trans'] = (\n",
+    "    transactions_df.groupby('User')['DateTime'].diff()\n",
+    ")\n",
+    "# convert to minutes\n",
+    "transactions_df['time_since_last_trans_minutes'] = transactions_df['time_since_last_trans'].dt.total_seconds() / 60\n",
+    "\n",
+    "#Convert to "
    ]
   }
  ],
